fixed home icon

--- a/FitBoard/Home_Page/Login_Page.html
+++ b/FitBoard/Home_Page/Login_Page.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <link rel="icon" href="../Landing_Page/favicon.ico">
+     <!-- Boxicons -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css?v=1.0' rel='stylesheet'>
     <style>
         /* Import a font from Google Fonts */
         @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
@@ -131,7 +133,7 @@
     <!-- Header section with the FITBOARD ADMIN title and home icon -->
     <div class="header">
         <h1>FITBOARD ADMIN</h1>
-        <a href="../LandingPage.html" class="home-icon">🏠</a>
+        <a href="../LandingPage.html" class="home-icon"><i class='bx bxs-home'></i></a>
     </div>
 
     <!-- Background section containing the login form -->
