--- a/FitBoard/AdminDashboard/adminDashboard.html
+++ b/FitBoard/AdminDashboard/adminDashboard.html
@@ -4,395 +4,23 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>FitBoard</title>
+	<title>Admin Dashboard - FitBoard</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<!-- CSS Stylesheets -->
 	<link rel="stylesheet" href="../Help/Help.css">
-	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+	<link rel="stylesheet" href="adminDashboard.css">
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<link rel="icon" href="../Landing_Page/favicon.ico">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap" rel="stylesheet">
-	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+	<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
-	<style>
-		body {
-			overflow: hidden;
-			/* Prevents scrolling of the whole page */
-		}
-
-		.main_content {
-			overflow: hidden;
-			/* Ensures the main content area doesn't scroll */
-		}
-
-		/* Styling for the Table Container */
-		.table-container {
-			max-height: 500px;
-			/* Adjust the height as needed */
-			overflow-y: auto;
-			/* Enables vertical scrolling */
-			margin-top: 20px;
-			/* Adds margin to the top of the container */
-			border: 1px solid #ddd;
-			/* Optional: Adds a border around the container */
-		}
-
-		table {
-			width: 100%;
-			border-collapse: collapse;
-			margin-top: 20px;
-			/* Added margin to create space above the table */
-		}
-
-		th,
-		td {
-			padding: 10px;
-			text-align: left;
-			border-bottom: 1px solid #ddd;
-		}
-
-		th {
-			cursor: pointer;
-		}
-
-		/* Sorting Arrows */
-		th.sort-asc::after {
-			content: " \25B2";
-		}
-
-		th.sort-desc::after {
-			content: " \25BC";
-		}
-
-		/* Search Container Styling */
-		.search-container {
-			margin-bottom: 20px;
-		}
-
-		.search-container input {
-			width: 100%;
-			padding: 10px;
-			margin-top: 10px;
-			margin-bottom: 10px;
-			box-sizing: border-box;
-		}
-
-		/* Edit Mode Styling */
-		.edit-mode {
-			display: none;
-		}
-
-		/* Help Icon Styling */
-		.help-icon {
-			position: fixed;
-			top: 10px;
-			right: 10px;
-			cursor: pointer;
-		}
-
-		/* Toggle Switch Container Styling */
-		.toggle-container {
-			display: flex;
-			align-items: center;
-			margin-top: 20px;
-			/* Added margin to move the toggle down */
-		}
-
-		/* Label Styling */
-		.toggle-container label {
-			margin-right: 10px;
-			/* Space between label and toggle */
-			font-size: 16px;
-			/* Adjust font size if necessary */
-		}
-
-		/* Toggle Switch Styling */
-		.toggle-switch {
-			position: relative;
-			display: inline-block;
-			width: 60px;
-			height: 34px;
-		}
-
-		.toggle-switch input {
-			opacity: 0;
-			width: 0;
-			height: 0;
-		}
-
-		.slider {
-			position: absolute;
-			cursor: pointer;
-			top: 0;
-			left: 0;
-			right: 0;
-			bottom: 0;
-			background-color: #ccc;
-			transition: .4s;
-		}
-
-		.slider:before {
-			position: absolute;
-			content: "";
-			height: 26px;
-			width: 26px;
-			left: 4px;
-			bottom: 4px;
-			background-color: white;
-			transition: .4s;
-		}
-
-		input:checked+.slider {
-			background-color: #2196F3;
-		}
-
-		input:checked+.slider:before {
-			transform: translateX(26px);
-		}
-
-		.slider.round {
-			border-radius: 34px;
-		}
-
-		.slider.round:before {
-			border-radius: 50%;
-		}
-
-		/* Ensure checkboxes are visible and correctly styled */
-		.student-checkbox {
-			margin: 0;
-			padding: 0;
-			width: 16px;
-			/* Adjust size as needed */
-			height: 16px;
-			/* Adjust size as needed */
-		}
-
-		/* Styling for filter container */
-		.filter-container {
-			margin-top: 10px;
-			margin-bottom: 10px;
-		}
-
-		.filter-container label,
-		.filter-container select {
-			margin-top: 5px;
-
-		}
-
-		/* General styling for the select element */
-		#filterYear {
-			padding: 5px;
-			font-size: 14px;
-			border: 1px solid #ccc;
-			border-radius: 4px;
-		}
-
-
-		/* Save Changes Button Styling */
-		.save-button {
-			margin-left: 10px;
-			/* Added margin to space it from the toggle */
-			padding: 10px 20px;
-			background-color: #4CAF50;
-			/* Green background */
-			color: white;
-			/* White text */
-			border: none;
-			/* Remove border */
-			border-radius: 5px;
-			/* Rounded corners */
-			cursor: pointer;
-			/* Pointer cursor on hover */
-			transition: background-color 0.3s;
-			/* Smooth transition for hover effect */
-		}
-
-		.save-button:hover {
-			background-color: #45a049;
-			/* Darker green on hover */
-		}
-
-
-		/* Styling for help button and popup */
-		.help-button {
-			position: fixed;
-			bottom: 20px;
-			right: 20px;
-			width: 50px;
-			height: 50px;
-			background-color: #5bc0de;
-			color: white;
-			border: none;
-			border-radius: 50%;
-			font-size: 24px;
-			cursor: pointer;
-			display: flex;
-			align-items: center;
-			justify-content: center;
-		}
-
-		.help-button:hover {
-			background-color: #46b8da;
-		}
-
-		.help-popup {
-			display: none;
-			position: fixed;
-			bottom: 80px;
-			right: 20px;
-			background-color: white;
-			border: 1px solid #ddd;
-			border-radius: 5px;
-			box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-			padding: 20px;
-			width: 300px;
-		}
-
-		.help-popup p {
-			margin: 0;
-		}
-
-		/* Styling for the delete button */
-		.delete-button {
-
-
-			margin-left: 10px;
-			/* Added margin to space it from the toggle */
-			padding: 10px 20px;
-			background-color: #f44336;
-			color: white;
-			/* White text */
-			border: none;
-			/* Remove border */
-			border-radius: 5px;
-			/* Rounded corners */
-			cursor: pointer;
-			/* Pointer cursor on hover */
-			transition: background-color 0.3s;
-			/* Smooth transition for hover effect */
-		}
-
-		.delete-button:hover {
-			background-color: #d32f2f;
-		}
-
-		/* Styling for the warning popup modal */
-		.modal {
-			display: none;
-			/* Hidden by default */
-			position: fixed;
-			/* Stay in place */
-			z-index: 1;
-			/* Sit on top */
-			padding-top: 100px;
-			/* Location of the box */
-			left: 0;
-			top: 0;
-			width: 100%;
-			/* Full width */
-			height: 100%;
-			/* Full height */
-			overflow: auto;
-			/* Enable scroll if needed */
-			background-color: rgb(0, 0, 0);
-			/* Fallback color */
-			background-color: rgba(0, 0, 0, 0.4);
-			/* Black w/ opacity */
-		}
-
-		/* Modal content */
-		.modal-content {
-			background-color: #fefefe;
-			margin: auto;
-			padding: 20px;
-			border: 1px solid #888;
-			width: 80%;
-			max-width: 400px;
-			/* Maximum width */
-			border-radius: 5px;
-			/* Rounded corners */
-		}
-
-		/* Close button */
-		.close {
-			color: #aaa;
-			float: right;
-			font-size: 28px;
-			font-weight: bold;
-		}
-
-		.close:hover,
-		.close:focus {
-			color: black;
-			text-decoration: none;
-			cursor: pointer;
-		}
-
-		/* Modal buttons */
-		.modal-buttons {
-			display: flex;
-			justify-content: space-between;
-		}
-
-		.modal-buttons button {
-			padding: 10px 20px;
-			border: none;
-			border-radius: 3px;
-			cursor: pointer;
-		}
-
-		.modal-buttons .confirm {
-			background-color: #f44336;
-			color: white;
-		}
-
-		.modal-buttons .cancel {
-			background-color: #aaa;
-			color: white;
-		}
-
-		/* New styling for the Add Student button */
-		.add-student-button {
-			display: flex;
-			align-items: center;
-			padding: 10px 20px;
-			background-color: #007bff;
-			/* Blue background */
-			color: white;
-			/* White text */
-			border: none;
-			/* Remove border */
-			border-radius: 5px;
-			/* Rounded corners */
-			cursor: pointer;
-			/* Pointer cursor on hover */
-			transition: background-color 0.3s;
-			/* Smooth transition for hover effect */
-			margin-left: 10px;
-			/* Space between the toggle switch and the button */
-		}
-
-		.add-student-button:hover {
-			background-color: #0056b3;
-			/* Darker blue on hover */
-		}
-
-		.add-student-button i {
-			margin-right: 8px;
-			/* Space between icon and text */
-		}
-
-		/* CSS to Apply Red Background for Invalid Data */
-		td.invalid {
-			background-color: red;
-			color: white;
-			/* Optional: Make text more readable on red background */
-		}
-	</style>
 </head>
 
 <body onload="onload()">
 
+	<!-- Sidebar Navigation -->
 	<div class="sidebar">
 		<div class="top">
 			<div class="logo">
@@ -402,15 +30,16 @@
             <i class='bx bx-menu' id="btn"></i>
         </div>
 
- <!-- User Profile Section -->
-
+        <!-- User Profile Section -->
         <div class="user">
             <img src="../Images/User_Image.jpg" alt="profile picture" class="User_Image" id="userImage">
             <div>
-               <p class="bold" id="userName">Default&#160User</p>
+                <p class="bold" id="userName">Default&#160User</p>
                 <p id="userRole">Admin</p>
             </div>
         </div>
+
+        <!-- Navigation Menu -->
         <ul>
             <li>
                 <a href="../Dashboard/adminDashboard.html">
@@ -431,7 +60,7 @@
                     <i class="bx bxs-duplicate"></i>
                     <span class="Nav_Item">Modify&#160Programs</span>
                 </a>
-                <span class="tooltip">Modify&#160Programs </span>
+                <span class="tooltip">Modify&#160Programs</span>
             </li>
             <li>
                 <a href="../Notifications/TeacherNotifications.html">
@@ -471,78 +100,82 @@
         </ul>
     </div>
 
-   <div class="main_content">
-    <div class="container" id="container">
-        <h1 id="main-heading">FitBoard</h1>
-        <h1 id="sub-heading">Student List</h1>
-    </div>
+    <!-- Main Content Area -->
+    <div class="main_content">
+        <div class="container" id="container">
+            <h1 id="main-heading">FitBoard</h1>
+            <h1 id="sub-heading">Student List</h1>
+        </div>
 
- 
-    <!-- Toggle Container with Label and Switch -->
-    <div class="toggle-container">
-      
+        <!-- Toggle Container with Label and Switch -->
+        <div class="toggle-container">
+            <label for="editToggle">Modify Mode</label>
+            <label class="toggle-switch">
+                <input type="checkbox" id="editToggle" onchange="toggleEditMode()">
+                <span class="slider round"></span>
+            </label>
 
-        <label for="editToggle">Modify Mode</label>
-        <label class="toggle-switch">
-            <input type="checkbox" id="editToggle" onchange="toggleEditMode()">
-            <span class="slider round"></span>
-        </label>
-           <!-- Add Student Button with Icon -->
-             <button onclick="redirectToAddStudent()" class="add-student-button">
+            <!-- Add Student Button with Icon -->
+            <button onclick="redirectToAddStudent()" class="add-student-button">
                 <i class="fas fa-plus"></i> Add Student
             </button>
-             <button onclick="confirmDelete()" id="deleteSelected" class="delete-button">
-    <i class="fas fa-trash-alt"></i> Delete Selected
-</button>
-        <!-- Save Changes Button Positioned to the Right -->
-        <button onclick="saveChanges()" class="edit-mode save-button">Save Changes</button>
+
+            <!-- Delete Selected Button -->
+            <button onclick="confirmDelete()" id="deleteSelected" class="delete-button">
+                <i class="fas fa-trash-alt"></i> Delete Selected
+            </button>
+
+            <!-- Save Changes Button Positioned to the Right -->
+            <button onclick="saveChanges()" class="edit-mode save-button">Save Changes</button>
+        </div>
+
+        <!-- Filter Container -->
+        <div class="filter-container">
+            <label for="filterYear">Filter by Year:</label>
+            <select id="filterYear" onchange="filterTable()">
+                <option value="">All Years</option>
+                <option value="7">Year 7</option>
+                <option value="8">Year 8</option>
+                <option value="9">Year 9</option>
+                <option value="10">Year 10</option>
+                <option value="11">Year 11</option>
+                <option value="12">Year 12</option>
+            </select>
+        </div>
+
+        <!-- Search Input Field -->
+        <div class="search-container">
+            <input type="text" id="searchInput" onkeyup="searchTable()" placeholder="Search for students..">
+        </div>
+
+        <!-- Student Table -->
+        <div class="table-container">
+            <table id="studentTable">
+                <thead>
+                   <tr>
+                        <th onclick="sortTable(0)" title="Sort by SBHS ID">SBHS ID</th>
+                        <th onclick="sortTable(1)" title="Sort by First Name">First Name</th>
+                        <th onclick="sortTable(2)" title="Sort by Last Name">Last Name</th>
+                        <th onclick="sortTable(3)" title="Sort by Year">Year</th>
+                        <th onclick="sortTable(4)" title="Sort by Tier">Tier</th>
+                        <th title="Select those to be deleted">Delete</th> <!-- Column for checkboxes -->
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </div>
     </div>
 
-  
-<div class="filter-container">
-    <label for="filterYear">Filter by Year:</label>
-    <select id="filterYear" onchange="filterTable()">
-        <option value="">All Years</option>
-        <option value="7">Year 7</option>
-        <option value="8">Year 8</option>
-        <option value="9">Year 9</option>
-        <option value="10">Year 10</option>
-        <option value="11">Year 11</option>
-        <option value="12">Year 12</option>
-    </select>
-</div>
+    <!-- Help Button -->
+    <button class="help-button" onclick="toggleHelpPopup()">?</button>
 
-    <!-- Search Input Field -->
-    <div class="search-container">
-        <input type="text" id="searchInput" onkeyup="searchTable()" placeholder="Search for students..">
+    <!-- Help Popup -->
+    <div class="help-popup" id="helpPopup">
+        <p>Use this page to view and edit student information. Click "Toggle Modify Mode" to enable editing. Click on the headings to sort or use the year filter.</p>
     </div>
 
-    <!-- Student Table -->
-    <div class="table-container">
-    <table id="studentTable">
-        <thead>
-            <tr>
-                <th onclick="sortTable(0)">SBHS ID</th>
-                <th onclick="sortTable(1)">First Name</th>
-                <th onclick="sortTable(2)">Last Name</th>
-                <th onclick="sortTable(3)">Year</th>
-                <th onclick="sortTable(4)">Tier</th>
-                 <th>Delete</th> <!-- Column for checkboxes -->
-            </tr>
-        </thead>
-        <tbody>
-        </tbody>
-    </table>
-    </div>
-
-</div>
-
-<button class="help-button" onclick="toggleHelpPopup()">?</button>
-<div class="help-popup" id="helpPopup">
-    <p>Use this page to view and edit student information. Click "Toggle Modify Mode" to enable editing, and then click "Save Changes" to save your edits to the database.</p>
-</div>
-
-  <!-- The Modal -->
+    <!-- The Modal -->
     <div id="deleteModal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal()">&times;</span>
@@ -553,27 +186,39 @@
             </div>
         </div>
     </div>
-   
-<script>
-    // Function to toggle the help popup
-function toggleHelpPopup() {
-    var helpPopup = document.getElementById('helpPopup');
-    helpPopup.style.display = helpPopup.style.display === 'none' ? 'block' : 'none';
-}
- // Redirect to add
-function redirectToAddStudent() {
-    window.location.href = 'add_student.html';
-}
-</script>
 
+    <script>
+        // Function to toggle the help popup
+        function toggleHelpPopup() {
+            var helpPopup = document.getElementById('helpPopup');
+            helpPopup.style.display = helpPopup.style.display === 'none' ? 'block' : 'none';
+        }
 
-        <script src="../adminAccessControl.js"></script>
-        
-        <script src="adminDashboard.js"></script>
-        <script src="../Home_Page/Activite_Sidebar.js"> </script>
-        <!-- <script src="../Settings/darklight_mode.js"></script>  -->
-        <script src="../Profile/Profile_Pic.js"></script>
-        <script src="../Profile/Profile_Check.js"></script>
-        <script src="../Settings/colour_slider.js"></script>
+        // Function to close the modal
+        function closeModal() {
+            document.getElementById('deleteModal').style.display = 'none';
+        }
+
+        // Function to handle delete confirmation
+        function confirmDelete() {
+            // Implement your delete logic here
+            closeModal();
+        }
+
+        // Redirect to add
+        function redirectToAddStudent() {
+            window.location.href = 'add_student.html';
+        }
+    </script>
+
+    <!-- External Javascript -->
+    <script src="../adminAccessControl.js"></script>
+    <script src="adminDashboard.js"></script>
+    <script src="../Home_Page/Activite_Sidebar.js"></script>
+    <!-- <script src="../Settings/darklight_mode.js"></script> -->
+    <script src="../Profile/Profile_Pic.js"></script>
+    <script src="../Profile/Profile_Check.js"></script>
+    <script src="../Settings/colour_slider.js"></script>
 </body>
+
 </html>
